# RegulatoryAgentBench

./: README.md  pyproject.toml  report.py  requirements.txt  run_simulation.py
are_scenarios/: sample-artifacts.json  sample-scenarios.json
rab/: scorer.py
rab/apps/: compliance_workbench.py
rab/scenarios/: loader.py
results/: gpt-5-mini_20260322T163328.json  gpt-5.4-mini_20260322T162135.json  gpt-5.4_20260322T162238.json  summary.txt
tests/: test_scorer.py
